--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,110 +14,128 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:context=".MainActivity">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:text="AOP Activity"
-                android:textSize="20dp" />
-
-            <RelativeLayout
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="#eee">
-
-                <Button
-                    android:id="@+id/btn_collection"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:onClick="@{activity::doCollection}"
-                    android:text="收藏(需要登陆,绑定手机号,实名认证)" />
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:text="AOP View"
-                android:textSize="20dp" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:background="#eee">
-
-                <LinearLayout
-                    android:id="@+id/layout_collection"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="10dp"
-                    android:background="#25DA6E"
-                    android:orientation="vertical"
-                    app:checkUserState="login"
-                    app:checkUserPolicy="autoGo"
-                    >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="拦截LinearLayout 需要登录以后才能执行收藏，没有登录自动登录"
-                        android:textColor="@color/white" />
-                </LinearLayout>
+                android:orientation="vertical"
+                tools:context=".MainActivity">
 
                 <TextView
-                    android:id="@+id/tv_collection"
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
-                    android:background="#3BA9F0"
-                    android:gravity="center"
-                    android:text="拦截TextView 需要登录以后才执行收藏,没有登录只提示用户"
-                    android:textColor="@color/white"
-                    app:checkUserState="login"
-                    app:checkUserPolicy="justCheck"/>
-            </RelativeLayout>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:text="生成任意对象的子类，在有注解的方法前插入相关逻辑"
+                    android:textSize="20dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:text="基于拦截器"
-                android:textSize="20dp" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="#eee">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:background="#eee" />
-        </LinearLayout>
+                    <Button
+                        android:id="@+id/btn_collection"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:onClick="@{activity::doCollection}"
+                        android:text="收藏(需要登陆,绑定手机号,实名认证)" />
+                </RelativeLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:text="自动拦截View的点击事件"
+                    android:textSize="20dp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:layout_weight="2"
+                    android:background="#eee">
+
+                    <LinearLayout
+                        android:id="@+id/layout_collection"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="10dp"
+                        android:background="#25DA6E"
+                        android:orientation="vertical"
+                        app:checkUserPolicy="autoGo"
+                        app:checkUserState="login">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="拦截LinearLayout 需要登录以后才能执行收藏，没有登录自动登录"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_collection"
+                        android:layout_width="110dp"
+                        android:layout_height="110dp"
+                        android:layout_centerInParent="true"
+                        android:layout_gravity="center"
+                        android:background="#3BA9F0"
+                        android:gravity="center"
+                        android:text="拦截TextView 需要登录以后才执行收藏,没有登录只提示用户"
+                        android:textColor="@color/white"
+                        app:checkUserPolicy="justCheck"
+                        app:checkUserState="login" />
+                </RelativeLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:text="和RXJava使用"
+                    android:textSize="20dp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:background="#eee">
+
+                    <Button
+                        android:id="@+id/btn_get_baidu_hot"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text="获取百度热榜(需要登录)" />
+
+                    <TextView
+                        android:id="@+id/tv_baidu_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_below="@id/btn_get_baidu_hot" />
+
+                </RelativeLayout>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
         <TextView
             android:id="@+id/tv_rest"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:text="重置状态"
-            android:background="#FE9E56"
-            android:layout_gravity="bottom|right"
             android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|right"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_height="50dp"/>
+            android:background="#FE9E56"
+            android:gravity="center"
+            android:text="重置状态"
+            android:textColor="@color/white" />
     </FrameLayout>
 </layout>
