--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -32,7 +32,8 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
                     android:text="生成任意对象的子类，在有注解的方法前插入相关逻辑"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    tools:ignore="HardcodedText,SpUsage" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -45,7 +46,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:onClick="@{activity::doCollection}"
-                        android:text="收藏(需要登陆,绑定手机号,实名认证)" />
+                        android:text="收藏(需要登陆,绑定手机号,实名认证)"
+                        tools:ignore="HardcodedText" />
                 </RelativeLayout>
 
                 <TextView
